--- a/package.json
+++ b/package.json
@@ -12,12 +12,37 @@
     "typescript": "^3.4.5"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.5.3",
+    "@types/bluebird": "^3.5.29",
     "@types/dotenv": "^6.1.1",
-    "@types/hdkey": "^0.7.0",
-    "@types/node": "^12.0.1",
-    "async-mutex": "^0.1.4",
-    "axios": "^0.18.0",
-    "dotenv": "^8.0.0"
+    "@types/express": "^4.17.2",
+    "@types/express-session": "^1.15.16",
+    "@types/graphql": "^14.5.0",
+    "@types/node": "^13.7.4",
+    "@types/passport": "^1.0.2",
+    "@types/passport-github": "^1.1.5",
+    "@types/passport-google-oauth20": "^2.0.3",
+    "@types/passport-local": "^1.0.33",
+    "@types/validator": "^12.0.1",
+    "body-parser": "^1.19.0",
+    "commander": "^4.1.1",
+    "dotenv": "^8.0.0",
+    "ejs": "^3.0.1",
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "express-session": "^1.17.0",
+    "graphql": "^14.6.0",
+    "graphql-custom-types": "^1.5.1",
+    "graphql-tools": "^4.0.7",
+    "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^5.21.5",
+    "sequelize-typescript": "^1.1.0",
+    "winston": "^3.2.1"
   },
   "scripts": {
     "test": "jest",
