feat: type-graphql를 이용하여 타이핑 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "emitDecoratorMetadata": true,
+    "allowSyntheticDefaultImports": true
   },
   "exclude": [
     "node_modules",
