--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "somul-system-backend",
+  "graphdoc": {
+    "endpoint": "http://localhost:80/graphql",
+    "output": "./doc/schema"
+  },
   "version": "1.0.0",
   "main": "index.js",
   "repository": "",
@@ -14,7 +18,6 @@
   "dependencies": {
     "@sendgrid/mail": "^6.5.3",
     "@types/bluebird": "^3.5.29",
-    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.2",
     "@types/express-session": "^1.15.16",
     "@types/graphql": "^14.5.0",
@@ -23,25 +26,31 @@
     "@types/passport-github": "^1.1.5",
     "@types/passport-google-oauth20": "^2.0.3",
     "@types/passport-local": "^1.0.33",
-    "@types/validator": "^12.0.1",
+    "@types/randomstring": "^1.1.6",
+    "@types/sha256": "^0.2.0",
+    "apollo-server-express": "^2.10.1",
     "body-parser": "^1.19.0",
     "commander": "^4.1.1",
     "dotenv": "^8.0.0",
-    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "express-session": "^1.17.0",
     "graphql": "^14.6.0",
     "graphql-custom-types": "^1.5.1",
+    "graphql-passport": "^0.6.1",
     "graphql-tools": "^4.0.7",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "randomstring": "^1.1.5",
     "reflect-metadata": "^0.1.13",
+    "sendgrid": "^5.2.3",
     "sequelize": "^5.21.5",
     "sequelize-typescript": "^1.1.0",
+    "sha256": "^0.2.0",
+    "type-graphql": "^0.17.6",
     "winston": "^3.2.1"
   },
   "scripts": {
