--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/jest": "^24.0.13",
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
+    "tslint": "^6.0.0",
+    "tslint-config-standard": "^9.0.0",
     "typescript": "^3.4.5"
   },
   "dependencies": {
