--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "sequelize": "^5.21.5",
     "sequelize-typescript": "^1.1.0",
     "sha256": "^0.2.0",
+    "tslint-config-prettier": "^1.18.0",
     "type-graphql": "^0.17.6",
     "winston": "^3.2.1"
   },
