feat: tslint 에서 eslint로 수정

--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^24.0.13",
+    "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "@typescript-eslint/parser": "^2.22.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1",
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
-    "tslint": "^6.0.0",
-    "tslint-config-standard": "^9.0.0",
     "typescript": "^3.4.5"
   },
   "dependencies": {
@@ -26,7 +29,6 @@
     "@types/passport-local": "^1.0.33",
     "@types/randomstring": "^1.1.6",
     "@types/sha256": "^0.2.0",
-    "apollo-server-express": "^2.10.1",
     "body-parser": "^1.19.0",
     "commander": "^4.1.1",
     "dotenv": "^8.0.0",
@@ -48,7 +50,6 @@
     "sequelize": "^5.21.5",
     "sequelize-typescript": "^1.1.0",
     "sha256": "^0.2.0",
-    "tslint-config-prettier": "^1.18.0",
     "type-graphql": "^0.17.6",
     "winston": "^3.2.1"
   },
@@ -59,6 +60,8 @@
     "watch-nodemon": "nodemon dist/index.js",
     "watch-node": "node dist/index.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript, Node\" -c \"yello.bold, cyan.bold\" \"yarn run watch-ts\" \"yarn run watch-nodemon\"",
-    "start": "tsc && node dist/index.js serve"
+    "start": "tsc && node dist/index.js serve",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint --fix src/*.ts src/**/*.ts src/**/**/*.ts src/**/**/**/*.ts"
   }
 }
