--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,8 +1,12 @@
 name: Node.js CI
 
-on: 
-  - [pull_request]
-  - [push]
+on:
+  push:
+    branches: 
+      - feature/*
+      - master 
+  pull_request:
+    branches: [ master ]
     
 jobs:
   build:
