--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@types/passport-local": "^1.0.33",
     "@types/randomstring": "^1.1.6",
     "@types/sha256": "^0.2.0",
+    "@types/swagger-jsdoc": "^3.0.2",
+    "@types/swagger-ui-express": "^4.1.1",
     "body-parser": "^1.19.0",
     "commander": "^4.1.1",
     "dotenv": "^8.0.0",
@@ -50,6 +52,8 @@
     "sequelize": "^5.21.5",
     "sequelize-typescript": "^1.1.0",
     "sha256": "^0.2.0",
+    "swagger-jsdoc": "^3.5.0",
+    "swagger-ui-express": "^4.1.3",
     "type-graphql": "^0.17.6",
     "winston": "^3.2.1"
   },
