--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@types/passport-local": "^1.0.33",
     "@types/randomstring": "^1.1.6",
     "@types/sha256": "^0.2.0",
+    "@types/sinon": "^7.5.2",
     "@types/swagger-jsdoc": "^3.0.2",
     "@types/swagger-ui-express": "^4.1.1",
+    "async-mutex": "^0.1.4",
     "body-parser": "^1.19.0",
     "commander": "^4.1.1",
     "dotenv": "^8.0.0",
@@ -42,6 +44,7 @@
     "graphql-passport": "^0.6.1",
     "graphql-tools": "^4.0.7",
     "mysql2": "^2.1.0",
+    "node-mocks-http": "^1.8.1",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
@@ -52,13 +55,14 @@
     "sequelize": "^5.21.5",
     "sequelize-typescript": "^1.1.0",
     "sha256": "^0.2.0",
+    "sinon": "^9.0.1",
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3",
     "type-graphql": "^0.17.6",
     "winston": "^3.2.1"
   },
   "scripts": {
-    "test": "jest",
+    "test": "NODE_ENV=sample jest",
     "build": "tsc",
     "watch-ts": "tsc -w",
     "watch-nodemon": "nodemon dist/index.js",
