--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/swagger-jsdoc": "^3.0.2",
     "@types/swagger-ui-express": "^4.1.1",
     "async-mutex": "^0.1.4",
+    "aws-sdk": "^2.643.0",
     "body-parser": "^1.19.0",
     "commander": "^4.1.1",
     "dotenv": "^8.0.0",
