feat: 유닛 테스트 스크립트 수정

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "graphql-tools": "^4.0.7",
     "mysql2": "^2.1.0",
     "node-mocks-http": "^1.8.1",
+    "nodemon": "^2.0.3",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
@@ -63,6 +64,7 @@
     "sinon": "^9.0.1",
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3",
+    "ts-node": "^8.9.0",
     "type-graphql": "^0.17.6",
     "winston": "^3.2.1"
   },
@@ -70,7 +72,7 @@
     "test": "jest",
     "build": "tsc",
     "watch-ts": "tsc -w",
-    "watch-nodemon": "nodemon dist/index.js",
+    "nodemon": "nodemon --watch src --delay 1 --exec 'ts-node' src/index.ts serve",
     "watch-node": "node dist/index.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript, Node\" -c \"yello.bold, cyan.bold\" \"yarn run watch-ts\" \"yarn run watch-nodemon\"",
     "start": "tsc && node dist/index.js serve",
