session 테이블 수정 및 slack 알람 기능 추가

--- a/.env.sample
+++ b/.env.sample
@@ -10,11 +10,17 @@ GOOGLE_CLIENT_SECRET=""
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
 
-SENDGRID_API_KEY= ""
+AWS_REGION=""
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+
 EMAIL_SUBJECT=""
-DOMAIN=""
+SERVER_DOMAIN=""
+CLIENT_DOMAIN=""
 
 DB_ENDPOINT=""
 DB_NAME=""
 DB_USERNAME=""
 DB_PASSWORD=""
+
+SLACK_WEBHOOK_URL = ""
