--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^6.5.3",
-    "@types/express": "^4.17.2",
+    "@slack/events-api": "^2.3.2",
+    "@slack/web-api": "^5.8.0",
+    "@slack/webhook": "^5.0.3",
+    "@types/bluebird": "^3.5.30",
     "@types/express-session": "^1.15.16",
     "@types/graphql": "^14.5.0",
     "@types/node": "^13.7.4",
