--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@slack/web-api": "^5.8.0",
     "@slack/webhook": "^5.0.3",
     "@types/bluebird": "^3.5.30",
+    "@types/cors": "^2.8.6",
     "@types/express-session": "^1.15.16",
     "@types/graphql": "^14.5.0",
     "@types/node": "^13.7.4",
@@ -38,6 +39,7 @@
     "aws-sdk": "^2.643.0",
     "body-parser": "^1.19.0",
     "commander": "^4.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
