--- a/package.json
+++ b/package.json
@@ -6,67 +6,67 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^24.0.13",
-    "@typescript-eslint/eslint-plugin": "^2.22.0",
-    "@typescript-eslint/parser": "^2.22.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.1",
-    "jest": "^24.8.0",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.4.5"
+    "@types/jest": "24.0.13",
+    "@typescript-eslint/eslint-plugin": "2.22.0",
+    "@typescript-eslint/parser": "2.22.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb-base": "14.0.0",
+    "eslint-plugin-import": "2.20.1",
+    "jest": "24.8.0",
+    "ts-jest": "24.0.2",
+    "typescript": "3.4.5"
   },
   "dependencies": {
-    "@sendgrid/mail": "^6.5.3",
-    "@slack/events-api": "^2.3.2",
-    "@slack/web-api": "^5.8.0",
-    "@slack/webhook": "^5.0.3",
-    "@types/bluebird": "^3.5.30",
-    "@types/cors": "^2.8.6",
-    "@types/express-session": "^1.15.16",
-    "@types/graphql": "^14.5.0",
-    "@types/node": "^13.7.4",
-    "@types/passport": "^1.0.2",
-    "@types/passport-github": "^1.1.5",
-    "@types/passport-google-oauth20": "^2.0.3",
-    "@types/passport-local": "^1.0.33",
-    "@types/randomstring": "^1.1.6",
-    "@types/sha256": "^0.2.0",
-    "@types/sinon": "^7.5.2",
-    "@types/swagger-jsdoc": "^3.0.2",
-    "@types/swagger-ui-express": "^4.1.1",
-    "async-mutex": "^0.1.4",
-    "aws-sdk": "^2.643.0",
-    "body-parser": "^1.19.0",
-    "commander": "^4.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
-    "express": "^4.17.1",
-    "express-graphql": "^0.9.0",
-    "express-session": "^1.17.0",
-    "graphql": "^14.6.0",
-    "graphql-custom-types": "^1.5.1",
-    "graphql-passport": "^0.6.1",
-    "graphql-tools": "^4.0.7",
-    "mysql2": "^2.1.0",
-    "node-mocks-http": "^1.8.1",
-    "nodemon": "^2.0.3",
-    "passport": "^0.4.1",
-    "passport-github": "^1.1.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0",
-    "randomstring": "^1.1.5",
-    "reflect-metadata": "^0.1.13",
-    "sendgrid": "^5.2.3",
-    "sequelize": "^5.21.5",
-    "sequelize-typescript": "^1.1.0",
-    "sha256": "^0.2.0",
-    "sinon": "^9.0.1",
-    "swagger-jsdoc": "^3.5.0",
-    "swagger-ui-express": "^4.1.3",
-    "ts-node": "^8.9.0",
-    "type-graphql": "^0.17.6",
-    "winston": "^3.2.1"
+    "@sendgrid/mail": "6.5.3",
+    "@slack/events-api": "2.3.2",
+    "@slack/web-api": "5.8.0",
+    "@slack/webhook": "5.0.3",
+    "@types/bluebird": "3.5.30",
+    "@types/cors": "2.8.6",
+    "@types/express-session": "1.15.16",
+    "@types/graphql": "14.5.0",
+    "@types/node": "13.7.4",
+    "@types/passport": "1.0.2",
+    "@types/passport-github": "1.1.5",
+    "@types/passport-google-oauth20": "2.0.3",
+    "@types/passport-local": "1.0.33",
+    "@types/randomstring": "1.1.6",
+    "@types/sha256": "0.2.0",
+    "@types/sinon": "7.5.2",
+    "@types/swagger-jsdoc": "3.0.2",
+    "@types/swagger-ui-express": "4.1.1",
+    "async-mutex": "0.1.4",
+    "aws-sdk": "2.643.0",
+    "body-parser": "1.19.0",
+    "commander": "4.1.1",
+    "cors": "2.8.5",
+    "dotenv": "8.0.0",
+    "express": "4.17.1",
+    "express-graphql": "0.9.0",
+    "express-session": "1.17.0",
+    "graphql": "14.6.0",
+    "graphql-custom-types": "1.5.1",
+    "graphql-passport": "0.6.1",
+    "graphql-tools": "4.0.7",
+    "mysql2": "2.1.0",
+    "node-mocks-http": "1.8.1",
+    "nodemon": "2.0.3",
+    "passport": "0.4.1",
+    "passport-github": "1.1.0",
+    "passport-google-oauth20": "2.0.0",
+    "passport-local": "1.0.0",
+    "randomstring": "1.1.5",
+    "reflect-metadata": "0.1.13",
+    "sendgrid": "5.2.3",
+    "sequelize": "5.21.5",
+    "sequelize-typescript": "1.1.0",
+    "sha256": "0.2.0",
+    "sinon": "9.0.1",
+    "swagger-jsdoc": "3.5.0",
+    "swagger-ui-express": "4.1.3",
+    "ts-node": "8.9.0",
+    "type-graphql": "0.17.6",
+    "winston": "3.2.1"
   },
   "scripts": {
     "test": "jest",
